--- a/GenericTwitterBot/packages.config
+++ b/GenericTwitterBot/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Web.WebJobs.Publish" version="2.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net461" />
   <package id="TweetSharp" version="2.3.1" targetFramework="net461" />
 </packages>
