--- a/GenericTwitterBot/Properties/webjob-publish-settings.json
+++ b/GenericTwitterBot/Properties/webjob-publish-settings.json
@@ -1,5 +1,6 @@
 ﻿{
   "$schema": "http://schemastore.org/schemas/json/webjob-publish-settings.json",
   "webJobName": "TrashyTweetBot",
-  "runMode": "OnDemand"
+  "runMode": "Continuous",
+  "schedule": "0 30 10 * * 1-5"
 }
